--- a/1_4_lambda_expressions_and_functions.ipynb
+++ b/1_4_lambda_expressions_and_functions.ipynb
@@ -60,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "nbpresent": {
           "id": "12154f73-b113-47f0-a659-899c3c2e9cda"
@@ -74,7 +74,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "nbpresent": {
           "id": "12154f73-b113-47f0-a659-899c3c2e9cda"
@@ -133,7 +133,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "N2F4HfJMks3E",
         "outputId": "40df4c4a-fc22-43ca-b09c-d74113a55642",
@@ -159,7 +159,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "nbpresent": {
           "id": "12154f73-b113-47f0-a659-899c3c2e9cda"
@@ -197,7 +197,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "nbpresent": {
           "id": "eb41b143-7ceb-475d-83e3-941bd5866cb4"
@@ -237,7 +237,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "wo7BaABTks3G"
       },
@@ -259,7 +259,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -284,7 +284,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "nbpresent": {
           "id": "2f7d8217-77e6-4c57-802a-ac417af24d61"
@@ -371,21 +371,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "3TpBAjjkks3I",
-        "outputId": "ffc64fc7-59a1-4273-b31a-71c8ee0f0e2b"
+        "outputId": "67517d94-49c2-4943-dd3c-4034edda77d9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "5.333333333333333"
             ]
           },
-          "execution_count": 26,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 3
         }
       ],
       "source": [
@@ -395,13 +398,80 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
-        "id": "QDn4-Haeks3I"
+        "id": "QDn4-Haeks3I",
+        "outputId": "cb5343cf-a183-4691-90d8-1cd077dc2ab0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5.333333333333333"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ],
       "source": [
-        ""
+        "#Replace h with the lambda function\n",
+        "(lambda x, y, z: 2*x*y+ y**2/z)(1,2,3)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#replace each x with the arguement value (1)\n",
+        "2*1*y + y**2/z"
+      ],
+      "metadata": {
+        "id": "9Seg2NFVh_pO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#replace each y with the arguement value (2)\n",
+        "2*1*2 + 2**2/z"
+      ],
+      "metadata": {
+        "id": "1Ji_gMCzh_Yf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#replace each z with the arguement value (3)\n",
+        "2*1*2 + 2**2/3"
+      ],
+      "metadata": {
+        "id": "xp-wy7m8h1P6",
+        "outputId": "b815c1a6-78a6-4862-cab3-fe3fafb3006d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5.333333333333333"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
       ]
     },
     {
@@ -419,7 +489,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": null,
       "metadata": {
         "id": "oOOK00Otks3I"
       },
@@ -436,7 +506,7 @@
       "metadata": {
         "id": "AlwZptego-qO"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -451,7 +521,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
