--- a/1_7_introduction_to_regular_expressions.ipynb
+++ b/1_7_introduction_to_regular_expressions.ipynb
@@ -177,11 +177,11 @@
       "cell_type": "code",
       "execution_count": 4,
       "metadata": {
-        "id": "o9CitQXu4NGD",
-        "outputId": "23fb125e-4aab-4019-83d8-dca1b7871b7d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "o9CitQXu4NGD",
+        "outputId": "23fb125e-4aab-4019-83d8-dca1b7871b7d"
       },
       "outputs": [
         {
@@ -227,11 +227,11 @@
       "cell_type": "code",
       "execution_count": 7,
       "metadata": {
-        "id": "caVkd3tt4NGE",
-        "outputId": "1fab9048-e68a-4a08-8b50-68a433bcaeac",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "caVkd3tt4NGE",
+        "outputId": "1fab9048-e68a-4a08-8b50-68a433bcaeac"
       },
       "outputs": [
         {
@@ -253,11 +253,11 @@
       "cell_type": "code",
       "execution_count": 8,
       "metadata": {
-        "id": "wzcFB2m44NGE",
-        "outputId": "39c26d29-8f98-4222-e992-f19cdec429b2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wzcFB2m44NGE",
+        "outputId": "39c26d29-8f98-4222-e992-f19cdec429b2"
       },
       "outputs": [
         {
@@ -288,12 +288,12 @@
       "cell_type": "code",
       "execution_count": 9,
       "metadata": {
-        "id": "ks4jEIm54NGF",
-        "outputId": "3eff1687-8ee8-47fa-8d3b-c0ced91368b0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "ks4jEIm54NGF",
+        "outputId": "3eff1687-8ee8-47fa-8d3b-c0ced91368b0"
       },
       "outputs": [
         {
@@ -318,12 +318,12 @@
       "cell_type": "code",
       "execution_count": 10,
       "metadata": {
-        "id": "5PgoRat_4NGF",
-        "outputId": "f5dbd2db-67bb-4834-cda0-7dd8b43a5c6a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "5PgoRat_4NGF",
+        "outputId": "f5dbd2db-67bb-4834-cda0-7dd8b43a5c6a"
       },
       "outputs": [
         {
@@ -467,6 +467,54 @@
         "id": "v3ZL8nO1BQ_Z"
       },
       "execution_count": 42,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pattern1 = \"aa+b*c+\"\n",
+        "my_regex = re.compile(pattern1)\n",
+        "assert my_regex.search('aaaabcc')\n",
+        "assert my_regex.search('aabbbbc')\n",
+        "assert my_regex.search('aacc')\n",
+        "assert not my_regex.search('a')"
+      ],
+      "metadata": {
+        "id": "VM2-5dsFdHpL"
+      },
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pattern1 = \"files? found\\?\"\n",
+        "my_regex = re.compile(pattern1)\n",
+        "assert my_regex.search('1 file found?')\n",
+        "assert my_regex.search('2 files found?')\n",
+        "assert my_regex.search('24 files found?')\n",
+        "assert not my_regex.search('No files found.')"
+      ],
+      "metadata": {
+        "id": "7nxKb8D_fCQG"
+      },
+      "execution_count": 48,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pattern1 = \"\\d\\.\\s+abc\"\n",
+        "my_regex = re.compile(pattern1)\n",
+        "assert my_regex.search('1.   abc')\n",
+        "assert my_regex.search('2.\tabc')\n",
+        "assert my_regex.search('3.           abc')\n",
+        "assert not my_regex.search('4.abc')"
+      ],
+      "metadata": {
+        "id": "qoGOnKTthVVp"
+      },
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -795,11 +843,11 @@
       "cell_type": "code",
       "execution_count": 19,
       "metadata": {
-        "id": "OreIJAcI4NGI",
-        "outputId": "f86d9086-6916-4a90-982e-0fe3fdb2411c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "OreIJAcI4NGI",
+        "outputId": "f86d9086-6916-4a90-982e-0fe3fdb2411c"
       },
       "outputs": [
         {
@@ -821,12 +869,12 @@
       "cell_type": "code",
       "execution_count": 20,
       "metadata": {
-        "id": "XyFkjF4e4NGJ",
-        "outputId": "5abf03c6-4708-43c4-e4ac-7118bfc0d0ac",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 166
-        }
+        },
+        "id": "XyFkjF4e4NGJ",
+        "outputId": "5abf03c6-4708-43c4-e4ac-7118bfc0d0ac"
       },
       "outputs": [
         {
