--- a/1_7_introduction_to_regular_expressions.ipynb
+++ b/1_7_introduction_to_regular_expressions.ipynb
@@ -175,13 +175,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "o9CitQXu4NGD",
-        "outputId": "23fb125e-4aab-4019-83d8-dca1b7871b7d"
+        "outputId": "eebe38a4-636d-4fe2-fd37-c56a14cd7be4"
       },
       "outputs": [
         {
@@ -192,7 +192,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 3
         }
       ],
       "source": [
@@ -213,7 +213,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "metadata": {
         "id": "ySwRs_0M4NGE"
       },
@@ -225,13 +225,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "caVkd3tt4NGE",
-        "outputId": "1fab9048-e68a-4a08-8b50-68a433bcaeac"
+        "outputId": "8f9e9fe9-8d55-48f6-9092-997bc8185dec"
       },
       "outputs": [
         {
@@ -242,7 +242,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 5
         }
       ],
       "source": [
@@ -251,13 +251,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "wzcFB2m44NGE",
-        "outputId": "39c26d29-8f98-4222-e992-f19cdec429b2"
+        "outputId": "462784ce-1f8e-47c4-bda9-2b7a7a50cb4f"
       },
       "outputs": [
         {
@@ -268,7 +268,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 6
         }
       ],
       "source": [
@@ -286,14 +286,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
         "id": "ks4jEIm54NGF",
-        "outputId": "3eff1687-8ee8-47fa-8d3b-c0ced91368b0"
+        "outputId": "e7579124-0272-46e0-dab7-bcad5fad2dc8"
       },
       "outputs": [
         {
@@ -307,7 +307,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 7
         }
       ],
       "source": [
@@ -316,14 +316,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
         "id": "5PgoRat_4NGF",
-        "outputId": "f5dbd2db-67bb-4834-cda0-7dd8b43a5c6a"
+        "outputId": "e75278a9-29f7-4663-db17-d2272167dd31"
       },
       "outputs": [
         {
@@ -337,7 +337,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 8
         }
       ],
       "source": [
@@ -357,7 +357,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 9,
       "metadata": {
         "id": "tz-9ghRH4NGF"
       },
@@ -384,7 +384,7 @@
       "metadata": {
         "id": "2z7zGsWi70Fj"
       },
-      "execution_count": 34,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -400,7 +400,7 @@
       "metadata": {
         "id": "YWb65PVE-JRd"
       },
-      "execution_count": 35,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -418,7 +418,7 @@
       "metadata": {
         "id": "O-qw8KIt_gGW"
       },
-      "execution_count": 36,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -433,7 +433,7 @@
       "metadata": {
         "id": "Le9mdX8D_103"
       },
-      "execution_count": 37,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -451,7 +451,7 @@
       "metadata": {
         "id": "5dH8yaBIAKA1"
       },
-      "execution_count": 38,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -466,7 +466,7 @@
       "metadata": {
         "id": "v3ZL8nO1BQ_Z"
       },
-      "execution_count": 42,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -482,7 +482,7 @@
       "metadata": {
         "id": "VM2-5dsFdHpL"
       },
-      "execution_count": 47,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -498,7 +498,7 @@
       "metadata": {
         "id": "7nxKb8D_fCQG"
       },
-      "execution_count": 48,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -514,7 +514,98 @@
       "metadata": {
         "id": "qoGOnKTthVVp"
       },
-      "execution_count": 49,
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pattern1 = \"^Mission\"\n",
+        "my_regex = re.compile(pattern1)\n",
+        "assert my_regex.search('Mission: Successful')\n",
+        "assert not my_regex.search('Last Mission: unsuccessful')\n",
+        "assert not my_regex.search('Next Mission: successful upon capture of target')\n"
+      ],
+      "metadata": {
+        "id": "LB5AfCu_o8rR"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pattern1 = \"^(file.+)\\.\"\n",
+        "my_regex = re.compile(pattern1)\n",
+        "assert my_regex.search('file_record_transcript.pdf')\n",
+        "assert my_regex.search('file_07241999.pdf')\n",
+        "assert not my_regex.search('testfile_fake.pdf.tmp')"
+      ],
+      "metadata": {
+        "id": "P4wQhbD_pqhW"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pattern1 = \"(\\w+ (\\d+))\"\n",
+        "my_regex = re.compile(pattern1)\n",
+        "assert my_regex.search('Jan 1987')\n",
+        "assert my_regex.search('May 1969')\n",
+        "assert my_regex.search('Aug 2011')"
+      ],
+      "metadata": {
+        "id": "UMV_qN3mr6dK"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pattern1 = \"(\\d+)x(\\d+)\"\n",
+        "my_regex = re.compile(pattern1)\n",
+        "assert my_regex.search('1280x720')\n",
+        "assert my_regex.search('1920x1600')\n",
+        "assert my_regex.search('1024x768')"
+      ],
+      "metadata": {
+        "id": "lxKhyXtGtJFd"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pattern1 = \"I love (cats|dogs)\"\n",
+        "my_regex = re.compile(pattern1)\n",
+        "assert my_regex.search('I love cats')\n",
+        "assert my_regex.search('I love dogs')\n",
+        "assert not my_regex.search('I love logs')\n",
+        "assert not my_regex.search('I love cogs')"
+      ],
+      "metadata": {
+        "id": "m775rsQ1u0wK"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pattern1 = \".*\"\n",
+        "my_regex = re.compile(pattern1)\n",
+        "assert my_regex.search('The quick brown fox jumps over the lazy dog.\t')\n",
+        "assert my_regex.search('There were 614 instances of students getting 90.0% or above.\t')\n",
+        "assert my_regex.search('The FCC had to censor the network for saying &$#*@!.\t')\n"
+      ],
+      "metadata": {
+        "id": "C85psHyXwnDV"
+      },
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -528,6 +619,13 @@
         "* Whitespace includes spaces, tabs, and newlines\n",
         "* Python uses escape characters: `\"\\t\"`, `\"\\n\"`"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "ztAU60dly4tu"
+      }
     },
     {
       "cell_type": "markdown",
@@ -830,7 +928,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "TSwVpQTt4NGI"
       },
@@ -841,7 +939,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -867,7 +965,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -906,7 +1004,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "fSEUPg6W4NGJ"
       },
